# crypto

./: .gitignore  README.md  pyproject.toml
configs/: README.md  base_config.yaml  lstm_config.yaml  xgboost_config.yaml
data/: data_preprocessing_xw.ipynb  ffill_summary_stats.json  ffill_validation_report.json
models/ARIMA/: ARIMA_hyper_para.csv
models/ARIMA/backtest/KPIs/: KPIs_10min.csv  KPIs_1d.csv  KPIs_1h.csv  KPIs_1min.csv
models/LSTM/: all_coins_kpi_results.csv
models/LSTM/models/: lstm_result.ipynb
models/LSTM/models/BNBUSDT_10min/: best_model.h5  data_prep_result.json  optimization_results.json  optimization_summary.json
models/LSTM/models/BNBUSDT_1H/: optimization_summary_20250626_164441.json  optimization_summary_20250627_080332.json
models/LSTM/models/BTCUSDT_10min/: data_prep_result.json  optimization_results.json  optimization_summary.json
models/LSTM/models/BTCUSDT_1H/: optimization_summary_20250626_203825.json  optimization_summary_20250627_064201.json
models/LSTM/models/ETHUSDT_10min/: best_model.h5  data_prep_result.json  optimization_results.json  optimization_summary.json
models/LSTM/models/ETHUSDT_1H/: optimization_summary_20250626_205848.json  optimization_summary_20250627_071457.json
models/LSTM/models/SOLUSDT_10min/: best_model.h5  data_prep_result.json  optimization_results.json  optimization_summary.json
models/LSTM/models/XRPUSDT_10min/: best_model.h5  (+3 more)
models/LightGBM/: average_return_10mins.csv
models/Logistic_Regression/: README.md
models/Logistic_Regression/features/: 10min_feature_importance.csv  1d_feature_importance.csv  1h_feature_importance.csv  1min_feature_importance.csv
models/XGBoost/: all_coins_kpi_results.csv
notebooks/: EDA_basic_xw.ipynb  EDA_log_return_xw.ipynb  lstm_result.ipynb  xgboost.ipynb
results/: ARIMA_10min_pr.csv  LGBM_10min_pr.csv  LSTM_10min_pr.csv  Logistic_10min_pr.csv  XGBoost_10min_pr.csv  compare_model.ipynb
src/: CryptoDataCleaner.py  KPI.py  config.py  data_loader_lstm.py  data_processing.py  feature_engineering.py  model_lstm.py  strategy_simulation.py  utils.py
(+127 files in other folders)
